--- a/animation.html
+++ b/animation.html
@@ -25,15 +25,15 @@
         </ul>
     </nav>
     <div>
-        <video src="..\endterm_assignment\Pic\video\1.mp4" muted loop autoplay width="600" ></video>
-        <video src="..\endterm_assignment\Pic\video\2.mp4" muted loop autoplay width="400" ></video> 
-        <video src="..\endterm_assignment\Pic\video\3.mp4" muted loop autoplay width="600" ></video>
-        <video src="..\endterm_assignment\Pic\video\4.mp4" muted loop autoplay width="600" ></video>
+        <video src="..\Pic\video\1.mp4" muted loop autoplay width="600" ></video>
+        <video src="..\Pic\video\2.mp4" muted loop autoplay width="400" ></video> 
+        <video src="..\Pic\video\3.mp4" muted loop autoplay width="600" ></video>
+        <video src="..\Pic\video\4.mp4" muted loop autoplay width="600" ></video>
     </div>
     <nav>
-        <a href="https://www.facebook.com/profile.php?id=100027835171336"><img src="..\endterm_assignment\Pic\sns\facebook.png" width="40"></a>
-        <a href="https://twitter.com/5hite_"><img src="..\endterm_assignment\Pic\sns\124021.png" width="40"></a>
-        <a href="https://www.instagram.com/bisheng_bai/"><img src="..\endterm_assignment\Pic\sns\instagram.png" width="40"></a>
+        <a href="https://www.facebook.com/profile.php?id=100027835171336"><img src="..\Pic\sns\facebook.png" width="40"></a>
+        <a href="https://twitter.com/5hite_"><img src="..\Pic\sns\124021.png" width="40"></a>
+        <a href="https://www.instagram.com/bisheng_bai/"><img src="..\Pic\sns\instagram.png" width="40"></a>
         <h4>e-mail: lblf0711@gmail.com</h4>
     </nav>
     
