--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
     </nav>
     <video src="" autoplay loop muted ></video>
     <nav>
-        <a href="https://www.facebook.com/profile.php?id=100027835171336"><img src="..\endterm_assignment\Pic\sns\facebook.png" width="40"></a>
-        <a href="https://twitter.com/5hite_"><img src="..\endterm_assignment\Pic\sns\124021.png" width="40"></a>
-        <a href="https://www.instagram.com/bisheng_bai/"><img src="..\endterm_assignment\Pic\sns\instagram.png" width="40"></a>
+        <a href="https://www.facebook.com/profile.php?id=100027835171336"><img src="..\Pic\sns\facebook.png" width="40"></a>
+        <a href="https://twitter.com/5hite_"><img src="..\Pic\sns\124021.png" width="40"></a>
+        <a href="https://www.instagram.com/bisheng_bai/"><img src="..\Pic\sns\instagram.png" width="40"></a>
         <h4>e-mail: lblf0711@gmail.com</h4>
     </nav>
 </body>
