--- a/photograph.html
+++ b/photograph.html
@@ -25,21 +25,21 @@
         </ul>
     </nav>
     <div class="content">
-    <img src="c:\Users\吳佳紜\Desktop\endterm_assignment\Pic\photograph\1.jpg" height="355">
-    <img src="c:\Users\吳佳紜\Desktop\endterm_assignment\Pic\photograph\2.jpg" height="355">
-    <img src="c:\Users\吳佳紜\Desktop\endterm_assignment\Pic\photograph\3.jpg" height="355">
-    <img src="c:\Users\吳佳紜\Desktop\endterm_assignment\Pic\photograph\4.jpg" height="355">
-    <img src="c:\Users\吳佳紜\Desktop\endterm_assignment\Pic\photograph\5.jpg" height="355">
-    <img src="c:\Users\吳佳紜\Desktop\endterm_assignment\Pic\photograph\10.jpg" height="355">
-    <img src="c:\Users\吳佳紜\Desktop\endterm_assignment\Pic\photograph\6.jpg" height="355">
-    <img src="c:\Users\吳佳紜\Desktop\endterm_assignment\Pic\photograph\7.jpg" height="355">
-    <img src="c:\Users\吳佳紜\Desktop\endterm_assignment\Pic\photograph\8.jpg" height="355">
-    <img src="c:\Users\吳佳紜\Desktop\endterm_assignment\Pic\photograph\9.jpg" height="355">
+    <img src="..\Pic\photograph\1.jpg" height="355">
+    <img src="..\Pic\photograph\2.jpg" height="355">
+    <img src="..\Pic\photograph\3.jpg" height="355">
+    <img src="..\Pic\photograph\4.jpg" height="355">
+    <img src="..\Pic\photograph\5.jpg" height="355">
+    <img src="..\Pic\photograph\10.jpg" height="355">
+    <img src="..\Pic\photograph\6.jpg" height="355">
+    <img src="..\Pic\photograph\7.jpg" height="355">
+    <img src="..\Pic\photograph\8.jpg" height="355">
+    <img src="..\Pic\photograph\9.jpg" height="355">
     </div>
     <nav>
-        <a href="https://www.facebook.com/profile.php?id=100027835171336"><img src="..\endterm_assignment\Pic\sns\facebook.png" width="40"></a>
-        <a href="https://twitter.com/5hite_"><img src="..\endterm_assignment\Pic\sns\124021.png" width="40"></a>
-        <a href="https://www.instagram.com/bisheng_bai/"><img src="..\endterm_assignment\Pic\sns\instagram.png" width="40"></a>
+        <a href="https://www.facebook.com/profile.php?id=100027835171336"><img src="..\Pic\sns\facebook.png" width="40"></a>
+        <a href="https://twitter.com/5hite_"><img src="..\Pic\sns\124021.png" width="40"></a>
+        <a href="https://www.instagram.com/bisheng_bai/"><img src="..\Pic\sns\instagram.png" width="40"></a>
         <h4>e-mail: lblf0711@gmail.com</h4>
     </nav>
 </body>
