--- a/trpg_1.html
+++ b/trpg_1.html
@@ -26,38 +26,38 @@
     </nav>
     <div class="content">
         <div class="logo">
-            <a href="#"><img class="logo_1" src="..\endterm_assignment\Pic\LOGO\Monsters_and_the_Order_of_Fantasy.png"
+            <a href="#"><img class="logo_1" src="..\Pic\LOGO\Monsters_and_the_Order_of_Fantasy.png"
                     alt="怪物們與綺想教團" width="160"></a>
-            <a href="trpg_2.html"><img class="logo_2" src="..\endterm_assignment\Pic\LOGO\carnival_of_madness.png"
+            <a href="trpg_2.html"><img class="logo_2" src="..\Pic\LOGO\carnival_of_madness.png"
                     alt="狂歡須知" width="160"></a>
             <a href="trpg_3.html"><img class="logo_1"
-                    src="..\endterm_assignment\Pic\LOGO\everything_melted_into_subterrane.png" alt="我融於黑暗之中"
+                    src="..\Pic\LOGO\everything_melted_into_subterrane.png" alt="我融於黑暗之中"
                     width="160"></a>
-            <a href="trpg_4.html"><img class="logo_2" src="..\endterm_assignment\Pic\LOGO\DND.png" alt="龍與地下城"
+            <a href="trpg_4.html"><img class="logo_2" src="..\Pic\LOGO\DND.png" alt="龍與地下城"
                     width="160"></a>
         </div>
         <div class="content_2">
             <div class="image-container">
-                <img draggable="false" class="zoom-image" id="zoomImg" src="..\endterm_assignment\Pic\1.jpg">
+                <img draggable="false" class="zoom-image" id="zoomImg" src="..\Pic\1.jpg">
             </div>
             <div class="content_4">
                 <img draggable="false" src="..\endterm_assignment\Pic\左.png" height="100">
                 <div class="content_3">
-                    <img class="img_2" id="img1" src="..\endterm_assignment\Pic\1.jpg">
-                    <img class="img_2" id="img2" src="..\endterm_assignment\Pic\2.png">
-                    <img class="img_2" src="..\endterm_assignment\Pic\3.jpg">
-                    <img class="img_2" src="..\endterm_assignment\Pic\4.jpg">
-                    <img class="img_2" src="..\endterm_assignment\Pic\5.jpg">
+                    <img class="img_2" id="img1" src="..\Pic\1.jpg">
+                    <img class="img_2" id="img2" src="..\Pic\2.png">
+                    <img class="img_2" src="..\Pic\3.jpg">
+                    <img class="img_2" src="..\Pic\4.jpg">
+                    <img class="img_2" src="..\Pic\5.jpg">
                 </div>
-                <img draggable="false" src="..\endterm_assignment\Pic\右.png" height="100">
+                <img draggable="false" src="..\Pic\右.png" height="100">
             </div>
         </div>
     </div>
     <nav>
         <a href="https://www.facebook.com/profile.php?id=100027835171336"><img
                 src="..\endterm_assignment\Pic\sns\facebook.png" width="40"></a>
-        <a href="https://twitter.com/5hite_"><img src="..\endterm_assignment\Pic\sns\124021.png" width="40"></a>
-        <a href="https://www.instagram.com/bisheng_bai/"><img src="..\endterm_assignment\Pic\sns\instagram.png"
+        <a href="https://twitter.com/5hite_"><img src="..\Pic\sns\124021.png" width="40"></a>
+        <a href="https://www.instagram.com/bisheng_bai/"><img src="..\Pic\sns\instagram.png"
                 width="40"></a>
         <h4>e-mail: lblf0711@gmail.com</h4>
     </nav>
