--- a/illustration.html
+++ b/illustration.html
@@ -7,13 +7,12 @@
     <title>Whity</title>
     <link rel="icon" href="..\Pic\小白.png" type="image/x-icon" />
     <link rel="stylesheet" href="Css/illustration.css">
-    <script src="illustration.js"></script>
 </head>
 
 <body>
     <nav id="main_menu">
         <ul class="level_1">
-            <li><a href="home.html">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li>
                 <a href="#">Gallery</a>
                 <ul class="level_2">
@@ -25,15 +24,35 @@
             <li><a href="photograph.html">Photograph</a></li>
         </ul>
     </nav>
-
+    <div class="image-flex" id="imageflex"></div>
     <nav>
-        <a href="https://www.facebook.com/profile.php?id=100027835171336"><img
-                src="Pic\sns\facebook.png" width="40"></a>
-        <a href="https://twitter.com/5hite_"><img src="Pic\sns\124021.png" width="40"></a>
-        <a href="https://www.instagram.com/bisheng_bai/"><img src="Pic\sns\instagram.png"
+        <a href="https://www.facebook.com/profile.php?id=100027835171336"><img src="Pic\sns\facebook.png"
                 width="40"></a>
+        <a href="https://twitter.com/5hite_"><img src="Pic\sns\124021.png" width="40"></a>
+        <a href="https://www.instagram.com/bisheng_bai/"><img src="Pic\sns\instagram.png" width="40"></a>
         <h4>e-mail: lblf0711@gmail.com</h4>
     </nav>
+    <script>
+        const imageGrid = document.getElementById('imageflex');
+        const numImages = 54; // 图片数量
+        const imgPath = 'PIC/img/'; // 图片路径（根据实际情况修改）
+
+        for (let i = 1; i <= numImages; i++) {
+            const img = document.createElement('img');
+            img.src = `${imgPath}${i}.jpg`; // 图片路径及名称（根据实际情况修改）
+            img.alt = `Image ${i}`;
+            img.classList.add('image-item'); // 添加样式类
+            imageGrid.appendChild(img);
+        }
+            function enlargeImage(index) {
+            const images = document.querySelectorAll('.image-item');
+            images.forEach((image, i) => {
+                if (i !== index - 1) {
+                    image.style.transform = 'scale(1)'; // 恢复其他图片的大小
+                }
+            });    
+        }
+    </script>
 </body>
 
 </html>
