--- a/illustration.html
+++ b/illustration.html
@@ -35,7 +35,7 @@
     <script>
         const imageGrid = document.getElementById('imageflex');
         const numImages = 54; // 图片数量
-        const imgPath = 'PIC/img/'; // 图片路径（根据实际情况修改）
+        const imgPath = 'Pic/img/'; // 图片路径（根据实际情况修改）
 
         for (let i = 1; i <= numImages; i++) {
             const img = document.createElement('img');
