--- a/photograph.html
+++ b/photograph.html
@@ -2,17 +2,17 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
+	<meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Whity</title>
+	<title>Whity</title>
     <link rel="icon" href="..\Pic\小白.png" type="image/x-icon" />
-    <link rel="stylesheet" href="Css/photograph.css">
+	<link rel="stylesheet" href="css/photograph.css" />
 </head>
 
 <body>
-    <nav id="main_menu">
+	<nav id="main_menu">
         <ul class="level_1">
-            <li><a href="home.html">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li>
                 <a href="#">Gallery</a>
                 <ul class="level_2">
@@ -24,24 +24,32 @@
             <li><a href="photograph.html">Photograph</a></li>
         </ul>
     </nav>
-    <div class="content">
-    <img src="Pic\photograph\1.jpg" height="355">
-    <img src="Pic\photograph\2.jpg" height="355">
-    <img src="Pic\photograph\3.jpg" height="355">
-    <img src="Pic\photograph\4.jpg" height="355">
-    <img src="Pic\photograph\5.jpg" height="355">
-    <img src="Pic\photograph\10.jpg" height="355">
-    <img src="Pic\photograph\6.jpg" height="355">
-    <img src="Pic\photograph\7.jpg" height="355">
-    <img src="Pic\photograph\8.jpg" height="355">
-    <img src="Pic\photograph\9.jpg" height="355">
-    </div>
-    <nav>
+	<div class="fixed_bg bg_1"></div>
+	<div class="infos color1"></div>
+	<div class="fixed_bg bg_2"></div>
+	<div class="infos color2"></div>
+	<div class="fixed_bg bg_3"></div>
+	<div class="infos color3"></div>
+	<div class="fixed_bg bg_4"></div>
+	<div class="infos color4"></div>
+	<div class="fixed_bg bg_5"></div>
+	<div class="infos color5"></div>
+	<div class="fixed_bg bg_6"></div>
+	<div class="infos color6"></div>
+	<div class="fixed_bg bg_7"></div>
+	<div class="infos color7"></div>
+	<div class="fixed_bg bg_8"></div>
+	<div class="infos color8"></div>
+	<div class="fixed_bg bg_9"></div>
+	<div class="infos color9"></div>
+	<div class="fixed_bg bg_10"></div>
+	<nav>
         <a href="https://www.facebook.com/profile.php?id=100027835171336"><img src="Pic\sns\facebook.png" width="40"></a>
         <a href="https://twitter.com/5hite_"><img src="Pic\sns\124021.png" width="40"></a>
         <a href="https://www.instagram.com/bisheng_bai/"><img src="Pic\sns\instagram.png" width="40"></a>
         <h4>e-mail: lblf0711@gmail.com</h4>
     </nav>
+
 </body>
 
 </html>
