--- a/trpg_4.html
+++ b/trpg_4.html
@@ -26,35 +26,38 @@
     </nav>
     <div class="content">
         <div class="logo">
-            <a href="#"><img class="logo_1" src="Pic/LOGO/Monsters_and_the_Order_of_Fantasy.png" alt="怪物們與綺想教團"
+            <a href="trpg_1.html"><img class="logo_1" src="Pic\LOGO\Monsters_and_the_Order_of_Fantasy.png"
+                    alt="怪物們與綺想教團" width="160"></a>
+            <a href="#"><img class="logo_2" src="Pic\LOGO\carnival_of_madness.png"
+                    alt="狂歡須知" width="160"></a>
+            <a href="trpg_3.html"><img class="logo_1"
+                    src="Pic\LOGO\everything_melted_into_subterrane.png" alt="我融於黑暗之中"
                     width="160"></a>
-            <a href="trpg_2.html"><img class="logo_2" src="Pic\LOGO\carnival_of_madness.png" alt="狂歡須知" width="160"></a>
-            <a href="trpg_3.html"><img class="logo_1" src="Pic\LOGO\everything_melted_into_subterrane.png" alt="我融於黑暗之中"
+            <a href="trpg_4.html"><img class="logo_2" src="Pic\LOGO\DND.png" alt="龍與地下城"
                     width="160"></a>
-            <a href="trpg_4.html"><img class="logo_2" src="Pic\LOGO\DND.png" alt="龍與地下城" width="160"></a>
         </div>
         <div class="content_2">
             <div class="image-container">
-                <img draggable="false" class="zoom-image" id="zoomImg" src="Pic\1.jpg">
+                <img draggable="false" class="zoom-image" id="zoomImg" src="Pic\41.png">
             </div>
             <div class="content_4">
-                <img draggable="false" src="Pic\左.png" height="100" id="prevImage">
+                <img draggable="false" src="Pic\左.png" height="100">
                 <div class="content_3">
-                    <img class="img_2" id="img1" src="Pic\1.jpg">
-                    <img class="img_2" id="img2" src="Pic\2.png">
-                    <img class="img_2" src="Pic\3.jpg">
-                    <img class="img_2" src="Pic\4.jpg">
-                    <img class="img_2" src="Pic\5.jpg">
+                    <img class="img_2" id="img1" src="Pic\41.png">
+                    <img class="img_2" id="img2" src="Pic\42.jpg">
+                    <img class="img_2" src="Pic\43.jpg">
+                    <img class="img_2" src="Pic\44.png">
                 </div>
-                <img draggable="false" src="Pic\右.png" height="100" id="nextImage">
+                <img draggable="false" src="Pic\右.png" height="100">
             </div>
         </div>
     </div>
     <nav>
-        <a href="https://www.facebook.com/profile.php?id=100027835171336"><img src="Pic\sns\facebook.png"
-                width="40"></a>
+        <a href="https://www.facebook.com/profile.php?id=100027835171336"><img
+                src="Pic\sns\facebook.png" width="40"></a>
         <a href="https://twitter.com/5hite_"><img src="Pic\sns\124021.png" width="40"></a>
-        <a href="https://www.instagram.com/bisheng_bai/"><img src="Pic\sns\instagram.png" width="40"></a>
+        <a href="https://www.instagram.com/bisheng_bai/"><img src="Pic\sns\instagram.png"
+                width="40"></a>
         <h4>e-mail: lblf0711@gmail.com</h4>
     </nav>
     <script>
@@ -112,13 +115,7 @@
             zoomImage.style.transformOrigin = `${imageX}% ${imageY}%`;
             zoomImage.style.transform = 'scale(1.5)';
         }
-        const contentContainer = document.querySelector('.content_3');
-        const prevButton = document.getElementById('prevImage');
-        const nextButton = document.getElementById('nextImage');
-        const imgWidth = document.querySelector('.img_2').clientWidth;
-        let scrollPosition = 0;
     </script>
-
 </body>
 
 </html>
