--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Whity</title>
     <link rel="icon" href="..\Pic\小白.png" type="image/x-icon" />
-    <link rel="stylesheet" href="Css/home.css">
+    <link rel="stylesheet" href="Css/index.css">
 </head>
 
 <body>
     <nav id="main_menu">
         <ul class="level_1">
-            <li><a href="home.html">Home</a>
+            <li><a href="index.html">Home</a>
             </li>
             <li>
                 <a href="#">Gallery</a>
@@ -25,7 +25,10 @@
             <li><a href="photograph.html">Photograph</a></li>
         </ul>
     </nav>
-    <video src="" autoplay loop muted ></video>
+    <div class="flex">
+    <img class="img2" src="Pic\image.png" width="300px">
+    <h3>Hello!<br />I'm whity nice to meet you.</h3>
+    </div>
     <nav>
         <a href="https://www.facebook.com/profile.php?id=100027835171336"><img src="Pic\sns\facebook.png" width="40"></a>
         <a href="https://twitter.com/5hite_"><img src="Pic\sns\124021.png" width="40"></a>
