--- a/trpg_1.html
+++ b/trpg_1.html
@@ -25,7 +25,7 @@
         </ul>
     </nav>
     <div>
-        <img src=c:\Users\吳佳紜\Desktop\學校\endterm_assignment\Pic\LOGO\F.jpg     height="800" >
+        <img src=Pic\LOGO\F.jpg     height="800" >
     <nav>
         <a href="https://www.facebook.com/profile.php?id=100027835171336"><img src="Pic\sns\facebook.png"
                 width="40"></a>
