--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       // 監聽第一支影片結束事件
       myVideo.addEventListener('ended', () => {
         // 切換影片來源
-        myVideo.src = 'Pic/video/loop.mp4';
+        myVideo.src = 'Pic/video/Loop.mp4';
         // 第二支影片重複播放
         myVideo.loop = true;
         // 再次開始播放
